unpackaged/main/default/objects/ET_Alter_Rates_Elements__mdt/ET_Alter_Rates_Elements__mdt.object-meta.xml
<CustomObject>
    <label>ET Alter Rates Elements</label>
    <pluralLabel>ET Alter Rates Elements</pluralLabel>
</CustomObject>