unpackaged/main/default/objects/ET_Alter_Rates_Elements__mdt/fields/Element_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Element_Api_Name__c</fullName>
    <label>Element Api Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>