unpackaged/main/default/objects/ET_Alter_Rates_Elements__mdt/fields/Element_For__c.field-meta.xml
<CustomField>
    <fullName>Element_For__c</fullName>
    <label>Element For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accountant/Cashier</fullName>
                <default>true</default>
                <label>Accountant/Cashier</label>
            </value>
            <value>
                <fullName>Accountant or Cashier</fullName>
                <isActive>false</isActive>
                <label>Accountant or Cashier</label>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Nanny</fullName>
            </value>
            <value>
                <fullName>Other Employee</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>