unpackaged/main/default/objects/ET_Alter_Rates_Elements__mdt/fields/Element_Name__c.field-meta.xml
<CustomField>
    <fullName>Element_Name__c</fullName>
    <label>Element Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>